# startup-dojo

./: .dockerignore  .gitignore  Dockerfile  README.md  cerebras_test.py  chunk.py  config.py  docker-compose.yml  embedding.py  main.py  otherai.txt  perplexit.md  perplexity.py  pyproject.toml  run.sh  search_legal.py  upsert_legal.py
backend/: chat_engine.py  rag_engine.py
chunk/: companies_act_chunks.json  labor_standards_act_chunks.json  specific_commercial_transaction_act_chunks.json
qdrant_storage/: raft_state.json
qdrant_storage/collections/legal_rag_gemma/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/legal_rag_gemma/0/segments/a4bb134e-751f-4d3c-a163-ba35cc3aa510/: mutable_id_tracker.mappings
qdrant_storage/collections/legal_rag_gemma/0/segments/b1e7f257-d16f-4f91-9c84-c55b555224bf/: mutable_id_tracker.mappings
qdrant_storage/collections/legal_rag_gemma/0/segments/e1afa9f0-4280-4c64-b477-df9ca031537c/: mutable_id_tracker.mappings
qdrant_storage/collections/legal_rag_gemma/0/segments/f623b209-efa2-4280-9ff7-37a118634d6e/: mutable_id_tracker.mappings
qdrant_storage/collections/legal_rag_v2/: config.json
qdrant_storage/collections/legal_rag_v2/0/: newest_clocks.json
qdrant_storage/collections/legal_rag_v2/0/segments/355b9fdc-9088-40c7-885a-da259c4e2d62/: mutable_id_tracker.mappings  segment.json
qdrant_storage/collections/legal_rag_v2/0/segments/c1303077-074e-448e-8b64-ceecaa299b4d/: mutable_id_tracker.mappings
utils/: prompts.py  tools.py
(+6 files in other folders)
