[project]
name = "entre-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cerebras>=0.0.1",
    "dotenv>=0.9.9",
    "openai>=2.8.1",
    "protobuf>=6.33.1",
    "qdrant-client>=1.16.1",
    "sentence-transformers>=5.1.2",
    "sentencepiece>=0.2.1",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
]
